headlamp/HTTPRoute.headlamp.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  hostnames:
    - headlamp.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headlamp
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
